devops/kubernetes/overlays/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-server
  annotations:
    # WebSocket支持
    cloud.google.com/app-protocols: '{"websocket":"HTTP"}'
    # 负载均衡器健康检查配置
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: websocket-server
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: websocket
  type: ClusterIP
